@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-17T02:22:45Z",
+  "timestamp" : "2022-07-17T08:25:24Z",
   "count_outdated" : 676,
   "uniques_outdated" : 351,
-  "count" : 703,
+  "count" : 702,
   "uniques" : 366,
   "clones" : [
     {
       "timestamp": "2022-07-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
